[package]
name = "rust-rover-utoipa-false-positive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34", features = ["full"] }
axum = "0.7.2"

# OpenAPI generation
utoipa = { version = "4.1.0", features = ["axum_extras", "chrono"] }
